# nightshift

./: .gitignore  AWAKE_LOG.md  CONTRIBUTING.md  HISTORY.md  NIGHTSHIFT_LOG.md  README.md  ROADMAP.md  pyproject.toml
.github/: AWAKE_RULES.md  NIGHTSHIFT_RULES.md  pull_request_template.md
dashboard/: package-lock.json  package.json  vite.config.ts
docs/: ARCHITECTURE.md  ERROR_RECOVERY.md  index.html
src/: __init__.py  _ast_utils.py  arch_generator.py  audit.py  automerge.py  automerge_exec.py  badges.py  benchmark.py  blame.py  brain.py  changelog.py  ci_gates.py  cli.py  commit_analyzer.py  compare.py  complexity.py  config.py  coupling.py  coverage_gate.py  coverage_map.py  coverage_tracker.py  dashboard.py  dead_code.py  dep_graph.py  deps_checker.py  diff_sessions.py  diff_visualizer.py  dna.py  docstring_gen.py  doctor.py  evolve.py  exporter.py  gitstats.py  health.py  health_trend.py  init_cmd.py  insights.py  issue_triage.py  maturity.py  module_graph.py  (+24 more)
tests/: test_arch_generator.py  test_ast_utils.py  test_audit.py  test_automerge.py  test_automerge_exec.py  test_badges.py  test_benchmark.py  test_blame.py  test_brain.py  test_changelog.py  test_ci_integration.py  test_cli.py  test_cli_session14.py  test_cli_session15.py  test_cli_session16.py  test_commit_analyzer.py  test_compare.py  test_complexity.py  test_config.py  test_coupling.py  test_coverage_gate.py  test_coverage_map.py  test_coverage_tracker.py  test_dashboard.py  test_dead_code.py  test_dep_checker.py  test_dep_graph.py  test_deps_checker.py  test_diff_sessions.py  test_diff_visualizer.py  (+40 more)
(+27 files in other folders)
